# shaniraq.kz

./: README.md  pyproject.toml  sql_app.db
app/: database.py  main.py  models.py
